--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,8 @@ body {
 
 @layer base {
   :root {
+    /* Altura do cabeçalho fixo */
+    --header-height: 4rem;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -96,5 +98,11 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@media (min-width: 640px) {
+  :root {
+    --header-height: 4.5rem;
   }
 }
