--- a/app/globals.css
+++ b/app/globals.css
@@ -697,7 +697,7 @@ div[class*='text-xs'][class*='inline-flex'][class*='items-center'][class*='gap-2
 
 /* Responsividade para telas pequenas */
 @media (max-width: 640px) {
-  [role='dialog'] {
+  [role='dialog']:not([data-radix-popover-content]) {
     max-width: 95vw !important;
     height: 100% !important;
     max-height: 95vh !important;
